refactored code in sass

--- a/index.html
+++ b/index.html
@@ -6,54 +6,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Студія</title>
     <!--
-      ШРИФТИ
-    -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Exo+2:wght@500&family=Montserrat:wght@400;700&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-      rel="stylesheet" />
-    <!--
-      НОРМАЛІЗАТОР
-    -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
-      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer" />
-    <!--
+      ===========================================
       СТИЛІ
+      ===========================================
     -->
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
   </head>
 
   <body>
-    <!-- HEADER з логотипом, навігацією та контактами -->
+    <!-- ====================================================
+    HEADER з логотипом, навігацією та контактами
+    ==================================================== -->
     <header class="header">
       <div class="header__container container">
         <nav class="nav">
-          <a href="./index.html" class="logo header__logo link"
+          <a href="./index.html" class="logo header__logo"
             >Web<span class="logo__text">Studio</span></a
           >
 
-          <ul class="nav__list list">
+          <ul class="nav__list">
             <li>
-              <a href="./index.html" class="nav__link nav__link--active link"
+              <a href="./index.html" class="nav__link nav__link--active"
                 >Студія</a
               >
             </li>
             <li>
-              <a href="./portfolio.html" class="nav__link link">Портфоліо</a>
+              <a href="./portfolio.html" class="nav__link">Портфоліо</a>
             </li>
             <li>
-              <a href="" class="nav__link link">Контакти</a>
+              <a href="" class="nav__link">Контакти</a>
             </li>
           </ul>
         </nav>
-        <ul class="contacts list">
+        <ul class="contacts">
           <li>
-            <a href="mailto:info@devstudio.com" class="contacts__link link"
+            <a href="mailto:info@devstudio.com" class="contacts__link"
               ><svg class="contacts__icon" width="16" height="12">
                 <use href="./images/icons.svg#envelope"></use>
               </svg>
@@ -61,7 +48,7 @@
             >
           </li>
           <li>
-            <a href="tel:+380961111111" class="contacts__link link"
+            <a href="tel:+380961111111" class="contacts__link"
               ><svg class="contacts__icon" width="10" height="16">
                 <use href="./images/icons.svg#smartphone"></use>
               </svg>
@@ -73,7 +60,9 @@
     </header>
 
     <main>
-      <!-- Герой -->
+      <!-- =================================================
+      Герой
+      ================================================= -->
       <section class="hero">
         <div class="container">
           <h1 class="hero__text">
@@ -86,12 +75,14 @@
         </div>
       </section>
 
-      <!--Corporate values-->
+      <!-- =================================================
+      Corporate values
+      ================================================= -->
       <section class="section">
         <div class="container">
           <h2 class="visually-hidden">Цінності</h2>
-          <ul class="values list">
-            <li class="values__item">
+          <ul class="values card-set">
+            <li class="values__item card-set__item">
               <div class="values__thumb">
                 <svg width="70" height="70">
                   <use href="./images/icons.svg#antenna"></use>
@@ -103,7 +94,7 @@
                 формування позиції.
               </p>
             </li>
-            <li class="values__item">
+            <li class="values__item card-set__item">
               <div class="values__thumb">
                 <svg width="70" height="70">
                   <use href="./images/icons.svg#clock"></use>
@@ -115,7 +106,7 @@
                 тягне у себе.
               </p>
             </li>
-            <li class="values__item">
+            <li class="values__item card-set__item">
               <div class="values__thumb">
                 <svg width="70" height="70">
                   <use href="./images/icons.svg#diagram"></use>
@@ -126,7 +117,7 @@
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
-            <li class="values__item">
+            <li class="values__item card-set__item">
               <div class="values__thumb">
                 <svg width="70" height="70">
                   <use href="./images/icons.svg#astronaut"></use>
@@ -142,13 +133,15 @@
         </div>
       </section>
 
-      <!--What do we do?-->
+      <!-- ============================================
+      What do we do?
+      ============================================ -->
       <section class="section section-activity">
         <div class="container">
           <h2 class="section__title">Чим ми займаємося</h2>
 
-          <ul class="activity card-set list">
-            <li class="card-set__item">
+          <ul class="activity card-set">
+            <li class="activity__item card-set__item">
               <div class="activity__thumb">
                 <img
                   src="./images/computer.jpg"
@@ -159,7 +152,7 @@
                 </div>
               </div>
             </li>
-            <li class="card-set__item">
+            <li class="activity__item card-set__item">
               <div class="activity__thumb">
                 <img
                   src="./images/smartphone.jpg"
@@ -170,7 +163,7 @@
                 </div>
               </div>
             </li>
-            <li class="card-set__item">
+            <li class="activity__item card-set__item">
               <div class="activity__thumb">
                 <img
                   src="./images/tablet.jpg"
@@ -185,12 +178,14 @@
         </div>
       </section>
 
-      <!--Our team-->
+      <!-- =======================================
+      Our team
+      ====================================== -->
       <section class="section section-team">
         <div class="container">
           <h2 class="section__title">Наша команда</h2>
 
-          <ul class="team card-set list">
+          <ul class="team card-set">
             <li class="card-set__item team__card">
               <img
                 src="./images/product-designer-photo.jpg"
@@ -199,11 +194,11 @@
               <div class="team__wrapper">
                 <h3 class="team__member">Ігор Дем'яненко</h3>
                 <p class="team__position" lang="en">Product Designer</p>
-                <ul class="socials list">
+                <ul class="socials">
                   <li>
                     <a
                       href="https://www.instagram.com/"
-                      class="socials__link link"
+                      class="socials__link"
                       target="_blank"
                       rel="noopener noreferrer"
                       aria-label="Instagram icon"
@@ -215,7 +210,7 @@
                   <li>
                     <a
                       href="https://twitter.com/"
-                      class="socials__link link"
+                      class="socials__link"
                       target="_blank"
                       rel="noopener noreferrer"
                       aria-label="Twitter icon"
@@ -227,7 +222,7 @@
                   <li>
                     <a
                       href="https://www.facebook.com/"
-                      class="socials__link link"
+                      class="socials__link"
                       target="_blank"
                       rel="noopener noreferrer"
                       aria-label="Facebook icon"
@@ -239,7 +234,7 @@
                   <li>
                     <a
                       href="https://www.linkedin.com/"
-                      class="socials__link link"
+                      class="socials__link"
                       target="_blank"
                       rel="noopener noreferrer"
                       aria-label="LinkedIn icon"
@@ -259,11 +254,11 @@
               <div class="team__wrapper">
                 <h3 class="team__member">Ольга Рєпіна</h3>
                 <p class="team__position" lang="en">Frontend Developer</p>
-                <ul class="socials list">
+                <ul class="socials">
                   <li>
                     <a
                       href="https://www.instagram.com/"
-                      class="socials__link link"
+                      class="socials__link"
                       target="_blank"
                       rel="noopener noreferrer"
                       aria-label="Instagram icon"
@@ -275,7 +270,7 @@
                   <li>
                     <a
                       href="https://twitter.com/"
-                      class="socials__link link"
+                      class="socials__link"
                       target="_blank"
                       rel="noopener noreferrer"
                       aria-label="Twitter icon"
@@ -287,7 +282,7 @@
                   <li>
                     <a
                       href="https://www.facebook.com/"
-                      class="socials__link link"
+                      class="socials__link"
                       target="_blank"
                       rel="noopener noreferrer"
                       aria-label="Facebook icon"
@@ -299,7 +294,7 @@
                   <li>
                     <a
                       href="https://www.linkedin.com/"
-                      class="socials__link link"
+                      class="socials__link"
                       target="_blank"
                       rel="noopener noreferrer"
                       aria-label="LinkedIn icon"
@@ -319,11 +314,11 @@
               <div class="team__wrapper">
                 <h3 class="team__member">Микола Тарасов</h3>
                 <p class="team__position" lang="en">Marketing</p>
-                <ul class="socials list">
+                <ul class="socials">
                   <li>
                     <a
                       href="https://www.instagram.com/"
-                      class="socials__link link"
+                      class="socials__link"
                       target="_blank"
                       rel="noopener noreferrer"
                       aria-label="Instagram icon"
@@ -335,7 +330,7 @@
                   <li>
                     <a
                       href="https://twitter.com/"
-                      class="socials__link link"
+                      class="socials__link"
                       target="_blank"
                       rel="noopener noreferrer"
                       aria-label="Twitter icon"
@@ -347,7 +342,7 @@
                   <li>
                     <a
                       href="https://www.facebook.com/"
-                      class="socials__link link"
+                      class="socials__link"
                       target="_blank"
                       rel="noopener noreferrer"
                       aria-label="Facebook icon"
@@ -359,7 +354,7 @@
                   <li>
                     <a
                       href="https://www.linkedin.com/"
-                      class="socials__link link"
+                      class="socials__link"
                       target="_blank"
                       rel="noopener noreferrer"
                       aria-label="LinkedIn icon"
@@ -379,11 +374,11 @@
               <div class="team__wrapper">
                 <h3 class="team__member">Михайло Єрмаков</h3>
                 <p class="team__position" lang="en">UI Designer</p>
-                <ul class="socials list">
+                <ul class="socials">
                   <li>
                     <a
                       href="https://www.instagram.com/"
-                      class="socials__link link"
+                      class="socials__link"
                       target="_blank"
                       rel="noopener noreferrer"
                       aria-label="Instagram icon"
@@ -395,7 +390,7 @@
                   <li>
                     <a
                       href="https://twitter.com/"
-                      class="socials__link link"
+                      class="socials__link"
                       target="_blank"
                       rel="noopener noreferrer"
                       aria-label="Twitter icon"
@@ -407,7 +402,7 @@
                   <li>
                     <a
                       href="https://www.facebook.com/"
-                      class="socials__link link"
+                      class="socials__link"
                       target="_blank"
                       rel="noopener noreferrer"
                       aria-label="Facebook icon"
@@ -419,7 +414,7 @@
                   <li>
                     <a
                       href="https://www.linkedin.com/"
-                      class="socials__link link"
+                      class="socials__link"
                       target="_blank"
                       rel="noopener noreferrer"
                       aria-label="LinkedIn icon"
@@ -434,17 +429,18 @@
           </ul>
         </div>
       </section>
-
-      <!--Our clients-->
+      <!-- ==================================
+      Our clients
+      ====================================== -->
       <section class="section">
         <div class="container">
           <h2 class="section__title">Постійні клієнти</h2>
 
-          <ul class="clients card-set list">
+          <ul class="clients card-set">
             <li>
               <a
                 href=""
-                class="clients__link card-set__item link"
+                class="clients__link card-set__item"
                 target="_blank"
                 rel="noopener noreferrer"
                 aria-label="Client`s icon 1"
@@ -456,7 +452,7 @@
             <li>
               <a
                 href=""
-                class="clients__link card-set__item link"
+                class="clients__link card-set__item"
                 target="_blank"
                 rel="noopener noreferrer"
                 aria-label="Client`s icon 2"
@@ -468,7 +464,7 @@
             <li>
               <a
                 href=""
-                class="clients__link card-set__item link"
+                class="clients__link card-set__item"
                 target="_blank"
                 rel="noopener noreferrer"
                 aria-label="Client`s icon 3"
@@ -480,7 +476,7 @@
             <li>
               <a
                 href=""
-                class="clients__link card-set__item link"
+                class="clients__link card-set__item"
                 target="_blank"
                 rel="noopener noreferrer"
                 aria-label="Client`s icon 4"
@@ -492,7 +488,7 @@
             <li>
               <a
                 href=""
-                class="clients__link card-set__item link"
+                class="clients__link card-set__item"
                 target="_blank"
                 rel="noopener noreferrer"
                 aria-label="Client`s icon 5"
@@ -504,7 +500,7 @@
             <li>
               <a
                 href=""
-                class="clients__link card-set__item link"
+                class="clients__link card-set__item"
                 target="_blank"
                 rel="noopener noreferrer"
                 aria-label="Client`s icon 6"
@@ -518,28 +514,31 @@
       </section>
     </main>
 
+    <!-- ======================================================
+    FOOTER
+  ======================================================== -->
     <footer class="footer">
       <div class="footer__container container">
         <div class="address-wrapper">
-          <a href="./index.html" class="logo footer__logo link"
+          <a href="./index.html" class="logo footer__logo"
             >Web<span class="logo__text--white">Studio</span></a
           >
           <address class="address">
             <a
               href="https://goo.gl/maps/S5SDA6FESSRb1srA7"
-              class="address__postal link"
+              class="address__postal"
               target="_blank"
               rel="noopener noreferrer"
               >м. Київ, пр-т Лесі Українки, 26</a
             >
-            <ul class="list">
+            <ul>
               <li class="address__contacts">
-                <a href="mailto:info@devstudio.com" class="address__link link"
+                <a href="mailto:info@devstudio.com" class="address__link"
                   >info@devstudio.com</a
                 >
               </li>
               <li class="address__contacts">
-                <a href="tel:+380961111111" class="address__link link"
+                <a href="tel:+380961111111" class="address__link"
                   >+38 096 111 11 11</a
                 >
               </li>
@@ -548,11 +547,11 @@
         </div>
         <div class="socials-wrapper">
           <p class="footer__text">ПРИЄДНУЙТЕСЬ</p>
-          <ul class="socials list">
+          <ul class="socials">
             <li>
               <a
                 href="https://www.instagram.com/"
-                class="socials__link socials__link--dark link"
+                class="socials__link socials__link--dark"
                 target="_blank"
                 rel="noopener noreferrer"
                 aria-label="Instagram icon"
@@ -564,7 +563,7 @@
             <li>
               <a
                 href="https://twitter.com/"
-                class="socials__link socials__link--dark link"
+                class="socials__link socials__link--dark"
                 target="_blank"
                 rel="noopener noreferrer"
                 aria-label="Twitter icon"
@@ -576,7 +575,7 @@
             <li>
               <a
                 href="https://www.facebook.com/"
-                class="socials__link socials__link--dark link"
+                class="socials__link socials__link--dark"
                 target="_blank"
                 rel="noopener noreferrer"
                 aria-label="Facebook icon"
@@ -588,7 +587,7 @@
             <li>
               <a
                 href="https://www.linkedin.com/"
-                class="socials__link socials__link--dark link"
+                class="socials__link socials__link--dark"
                 target="_blank"
                 rel="noopener noreferrer"
                 aria-label="LinkedIn icon"
@@ -620,8 +619,9 @@
         </div>
       </div>
     </footer>
-
-    <!--Modal-->
+    <!-- ===============================================
+    Modal
+    ========================================= -->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="modal__btn" data-modal-close>
