--- a/portfolio.html
+++ b/portfolio.html
@@ -5,57 +5,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Портфоліо</title>
-    <!--
-      ШРИФТИ
-    -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Exo+2:wght@500&family=Montserrat:wght@400;700&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-      rel="stylesheet" />
-    <!--
-      НОРМАЛІЗАТОР
-    -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
-      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer" />
-    <!--
+
+    <!-- ====================================
       СТИЛІ
-    -->
-    <link rel="stylesheet" href="./css/styles.css" />
+   ===================================== -->
+    <link rel="stylesheet" href="./css/main.min.css" />
   </head>
 
   <body>
-    <!-- HEADER з логотипом, навігацією та контактами -->
+    <!-- ===============================================
+    HEADER з логотипом, навігацією та контактами
+    =============================================== -->
     <header class="header">
       <div class="header__container container">
         <nav class="nav">
-          <a href="./index.html" class="logo header__logo link"
+          <a href="./index.html" class="logo header__logo"
             >Web<span class="logo__text">Studio</span></a
           >
 
-          <ul class="nav__list list">
+          <ul class="nav__list">
             <li>
-              <a href="./index.html" class="nav__link link">Студія</a>
-            </li>
-            <li>
-              <a
-                href="./portfolio.html"
-                class="nav__link nav__link--active link"
-                >Портфоліо</a
+              <a href="./index.html" class="nav__link nav__link--active"
+                >Студія</a
               >
             </li>
             <li>
-              <a href="" class="nav__link link">Контакти</a>
+              <a href="./portfolio.html" class="nav__link">Портфоліо</a>
+            </li>
+            <li>
+              <a href="" class="nav__link">Контакти</a>
             </li>
           </ul>
         </nav>
-        <ul class="contacts list">
+        <ul class="contacts">
           <li>
-            <a href="mailto:info@devstudio.com" class="contacts__link link"
+            <a href="mailto:info@devstudio.com" class="contacts__link"
               ><svg class="contacts__icon" width="16" height="12">
                 <use href="./images/icons.svg#envelope"></use>
               </svg>
@@ -63,7 +47,7 @@
             >
           </li>
           <li>
-            <a href="tel:+380961111111" class="contacts__link link"
+            <a href="tel:+380961111111" class="contacts__link"
               ><svg class="contacts__icon" width="10" height="16">
                 <use href="./images/icons.svg#smartphone"></use>
               </svg>
@@ -78,10 +62,10 @@
       <section class="section">
         <div class="container">
           <h1 class="visually-hidden">Проекти</h1>
-
-          <!-- FILTERS -->
-
-          <ul class="filters list">
+          <!-- =====================================
+          FILTERS
+====================================== -->
+          <ul class="filters">
             <li class="filters__item">
               <button type="button" class="filters__btn">Усі</button>
             </li>
@@ -98,11 +82,12 @@
               <button type="button" class="filters__btn">Маркетинг</button>
             </li>
           </ul>
-
-          <!-- PROJECTS -->
-          <ul class="projects list card-set">
+          <!-- ======================================
+          PROJECTS
+===================================== -->
+          <ul class="projects card-set">
             <li class="card-set__item projects__item">
-              <a href="" class="link" rel="noopener noreferrer">
+              <a href="" rel="noopener noreferrer">
                 <div class="projects__thumb">
                   <img
                     src="./images/tech-website.jpg"
@@ -124,7 +109,7 @@
               </a>
             </li>
             <li class="card-set__item projects__item">
-              <a href="" class="link" rel="noopener noreferrer">
+              <a href="" rel="noopener noreferrer">
                 <div class="projects__thumb">
                   <img
                     src="./images/poster.jpg"
@@ -148,7 +133,7 @@
               </a>
             </li>
             <li class="card-set__item projects__item">
-              <a href="" class="link" rel="noopener noreferrer">
+              <a href="" rel="noopener noreferrer">
                 <div class="projects__thumb">
                   <img
                     src="./images/seafood.jpg"
@@ -172,7 +157,7 @@
               </a>
             </li>
             <li class="card-set__item projects__item">
-              <a href="" class="link" rel="noopener noreferrer">
+              <a href="" rel="noopener noreferrer">
                 <div class="projects__thumb">
                   <img src="./images/prime.jpg" alt="навушники" width="370" />
                   <div class="overlay">
@@ -193,7 +178,7 @@
               </a>
             </li>
             <li class="card-set__item projects__item">
-              <a href="" class="link" rel="noopener noreferrer">
+              <a href="" rel="noopener noreferrer">
                 <div class="projects__thumb">
                   <img src="./images/boxes.jpg" alt="коробки" width="370" />
                   <div class="overlay">
@@ -214,7 +199,7 @@
               </a>
             </li>
             <li class="card-set__item projects__item">
-              <a href="" class="link" rel="noopener noreferrer">
+              <a href="" rel="noopener noreferrer">
                 <div class="projects__thumb">
                   <img
                     src="./images/inspiration.jpg"
@@ -238,7 +223,7 @@
               </a>
             </li>
             <li class="card-set__item projects__item">
-              <a href="" class="link" rel="noopener noreferrer">
+              <a href="" rel="noopener noreferrer">
                 <div class="projects__thumb">
                   <img
                     src="./images/ltd-edition.jpg"
@@ -262,7 +247,7 @@
               </a>
             </li>
             <li class="card-set__item projects__item">
-              <a href="" class="link" rel="noopener noreferrer">
+              <a href="" rel="noopener noreferrer">
                 <div class="projects__thumb">
                   <img
                     src="./images/lab.jpg"
@@ -286,7 +271,7 @@
               </a>
             </li>
             <li class="card-set__item projects__item">
-              <a href="" class="link" rel="noopener noreferrer">
+              <a href="" rel="noopener noreferrer">
                 <div class="projects__thumb">
                   <img
                     src="./images/grow-business.jpg"
@@ -311,30 +296,31 @@
         </div>
       </section>
     </main>
-
-    <!-- FOOTER-->
+    <!-- ====================================
+    FOOTER
+    ================================ -->
     <footer class="footer">
       <div class="footer__container container">
         <div class="address-wrapper">
-          <a href="./index.html" class="logo footer__logo link"
+          <a href="./index.html" class="logo footer__logo"
             >Web<span class="logo__text--white">Studio</span></a
           >
           <address class="address">
             <a
               href="https://goo.gl/maps/S5SDA6FESSRb1srA7"
-              class="address__postal link"
+              class="address__postal"
               target="_blank"
               rel="noopener noreferrer"
               >м. Київ, пр-т Лесі Українки, 26</a
             >
-            <ul class="list">
+            <ul>
               <li class="address__contacts">
-                <a href="mailto:info@devstudio.com" class="address__link link"
+                <a href="mailto:info@devstudio.com" class="address__link"
                   >info@devstudio.com</a
                 >
               </li>
               <li class="address__contacts">
-                <a href="tel:+380961111111" class="address__link link"
+                <a href="tel:+380961111111" class="address__link"
                   >+38 096 111 11 11</a
                 >
               </li>
@@ -343,11 +329,11 @@
         </div>
         <div class="socials-wrapper">
           <p class="footer__text">ПРИЄДНУЙТЕСЬ</p>
-          <ul class="socials list">
+          <ul class="socials">
             <li>
               <a
                 href="https://www.instagram.com/"
-                class="socials__link socials__link--dark link"
+                class="socials__link socials__link--dark"
                 target="_blank"
                 rel="noopener noreferrer"
                 aria-label="Instagram icon"
@@ -359,7 +345,7 @@
             <li>
               <a
                 href="https://twitter.com/"
-                class="socials__link socials__link--dark link"
+                class="socials__link socials__link--dark"
                 target="_blank"
                 rel="noopener noreferrer"
                 aria-label="Twitter icon"
@@ -371,7 +357,7 @@
             <li>
               <a
                 href="https://www.facebook.com/"
-                class="socials__link socials__link--dark link"
+                class="socials__link socials__link--dark"
                 target="_blank"
                 rel="noopener noreferrer"
                 aria-label="Facebook icon"
@@ -383,7 +369,7 @@
             <li>
               <a
                 href="https://www.linkedin.com/"
-                class="socials__link socials__link--dark link"
+                class="socials__link socials__link--dark"
                 target="_blank"
                 rel="noopener noreferrer"
                 aria-label="LinkedIn icon"
