fix local fonts

--- a/portfolio.html
+++ b/portfolio.html
@@ -8,11 +8,11 @@
     <!--
       ШРИФТИ
     -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Exo+2:wght@500&family=Montserrat:wght@400;700&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-      rel="stylesheet" />
+      rel="stylesheet" /> -->
 
     <!-- ====================================
       СТИЛІ
