fixes local fonts attempt 3

--- a/portfolio.html
+++ b/portfolio.html
@@ -5,15 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Портфоліо</title>
-    <!--
-      ШРИФТИ
-    -->
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Exo+2:wght@500&family=Montserrat:wght@400;700&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-      rel="stylesheet" /> -->
-
     <!-- ====================================
       СТИЛІ
    ===================================== -->
@@ -33,12 +24,12 @@
 
           <ul class="nav__list">
             <li>
-              <a href="./index.html" class="nav__link nav__link--active"
-                >Студія</a
-              >
+              <a href="./index.html" class="nav__link">Студія</a>
             </li>
             <li>
-              <a href="./portfolio.html" class="nav__link">Портфоліо</a>
+              <a href="./portfolio.html" class="nav__link nav__link--active"
+                >Портфоліо</a
+              >
             </li>
             <li>
               <a href="" class="nav__link">Контакти</a>
